# PQC_BA_Zephyrproject-main

./: .gitmodules  README.md  design-requirements.tex  digital_artifacts.tex
documentation/further docs/: Timetable.xlsx
firmware/HW_Test_Template/: CMakeLists.txt  README.md  prj.conf  prj.conf (With full board functionality)
firmware/HW_Test_Template/src/: main.c
firmware/boards/st/mc1board/: Kconfig.defconfig  Kconfig.mc1board  board.cmake  board.yml  mc1board.dts  mc1board.yaml
firmware/git_submodules/FIPS203_Implementation/: CMakeLists.txt  FIPS203_ML_KEM_INTEGRATION.md  README.md  mc1board.overlay  prj.conf
firmware/git_submodules/FIPS203_Implementation/src/: ECDHA_implementation.c  ECDHA_implementation.h  Fips203_dispatch.c  Fips203_implementation.c  Fips203_implementation.cpp  Fips203_implementation.h  main.c  user_usb.c  user_usb.h
firmware/git_submodules/FIPS204_Implementation/: CMakeLists.txt  README.md  prj.conf
firmware/git_submodules/FIPS204_Implementation/src/: ECDSA_implementation.cpp  ECDSA_implementation.h  FiPS204_implementation.cpp  FiPS204_implementation.h  USBcommunication.cpp  USBcommunication.h  main.cpp
firmware/git_submodules/FIPS204_Implementation/src/ml_dsa/internals/math/: field.hpp
firmware/git_submodules/FIPS205_Implementation/: CMakeLists.txt  README.md  mc1board.overlay  prj.conf
firmware/git_submodules/FIPS205_Implementation/src/: Fips205_implementation.c  Fips205_implementation.h  RSAPSS_implementation.cpp  RSAPSS_implementation.h  USBcommunication.cpp  USBcommunication.h  main.cpp
firmware/modules/touch/drivers/: CMakeLists.txt
firmware/modules/touch/drivers/input/: CMakeLists.txt  Kconfig  tsc2007.c
firmware/modules/touch/dts/bindings/input/: ti,tsc2007.yaml
firmware/modules/touch/zephyr/: module.yaml
hardware/MC1_Board/: MC1_Board.PrjPcb  MC1_Board.PrjPcbVariants
hardware/MC1_Board/Docs/: AssemblyDrawing.PCBDwf  Ethernet.Harness  Ethernet.SchDoc  J-Link-OB.Harness  J-Link-OB.SchDoc  MC1_Board.OutJob  MC1_Board_Gen2.SchDoc  Power.SchDoc  STM32H573.Harness  STM32H573.SchDoc  UI_and_IO-Connectors.Harness  UI_and_IO-Connectors.SchDoc  USB.Harness  USB.SchDoc  microSD.Harness  microSD.SchDoc
hardware/PCB_MC1_LCD/: MC1_LCD.BomDoc  MC1_LCD.PrjPcb  MC1_LCD.PrjPcbStructure  MC1_LCD.PrjPcbVariants  PRJT-001-0005-1.Preview.emf  PRJT-001-0005-1.PrjPCBStructure
hardware/PCB_MC1_LCD/Docs/: AssemblyDrawing.PCBDwf  MC1_LCD.OutJob  MC1_LCD.PcbDoc  MC1_LCD.SchDoc
hardware/docs/pinout/: MC1_H573_Pinout.numbers  MC1_H573_Pinout.xlsx
